# Ai-Agents-EditorHouse

./: .gitignore  BOOK_GENERATION_FIX_REPORT.md  README.md  a2as.yaml  bookidea.txt  gemini-workspace.md  pyproject.toml  regenerate_chapters.py  test_chapter_generation.py
Ai-book-adk/: __init__.py  agent.py  tools.py
Ai-book-adk/sub_agents/editor_agent/: __init__.py  agent.py  tools.py
Ai-book-adk/sub_agents/house_manager_agent/: __init__.py  agent.py  prompt.py  tools.py
Ai-book-adk/sub_agents/illustrator_agent/: __init__.py  agent.py  illustrator.py  prompt.py
Ai-book-adk/sub_agents/illustrator_agent/sub_agents/image_description_writer_agent/: __init__.py  agent.py
Ai-book-adk/sub_agents/publisher_agent/: __init__.py  agent.py  tools.py
Ai-book-adk/sub_agents/research_agent/: __init__.py  agent.py  prompt.py  reddit_story.py
Ai-book-adk/sub_agents/thinker_agent/: __init__.py  agent.py  tools.py
Ai-book-adk/sub_agents/writer_agent/: __init__.py  agent.py  tools.py
others/: Copilot.md  EDITOR_AGENT_FIX_REPORT.md  clean_chapters.py  editor.py  example.py  illustrator.py  index.html  main.py  test_editor_fix.py
others/static/: dark-theme.css  script.js  styles.css
